[DOC] tech-report: add definitions for primal problem

--- a/Documentation/i.palachev/Thesis/TechnicalReport/TechnicalReport.tex
+++ b/Documentation/i.palachev/Thesis/TechnicalReport/TechnicalReport.tex
@@ -393,35 +393,58 @@ $\delta(\mathfrak{F})$. Пусть оно представляет собой н
 
 Первое, о чем следует сказать, есть то, что проблема возникает из прикладной
 задачи, и поэтому допускает некоторую нечеткость в своей формулировке. Это дает
-возможность математические формализации задачи.
+возможность предлагать различные математические формализации задачи.
 
 \begin{SmartDefinition}
  Пусть $\pi$ -- некоторая плоскость в $\mathbb{R}^{3}$, проходящая через начало
- координат $O = (0, 0, 0)$. \textbf{Теневым контуром}
- $C = A_{1} A_{2} \ldots A_{n}$ называется  простая ломаная (т. е. ломаная без
- самопересечений) с конечным числом вершин, лежащая в плоскости $\pi$ таким
- образом, что ограниченная этой ломаной область в плоскости $\pi$ содержит
- начало координат $O$.
+ координат $O = (0, 0, 0)$. \textbf{Теневым контуром на плоскости $\pi$}
+ называется всякая простая ломаная $C = A_{1} A_{2} \ldots A_{n}$ (т. е.
+ ломаная без самопересечений) с конечным числом вершин, лежащая в плоскости
+ $\pi$ таким образом, что ограниченная этой ломаной область в плоскости $\pi$
+ содержит начало координат $O$.
 \end{SmartDefinition}
 
 \begin{SmartDefinition}
- Пусть $K$ - некоторое тело в $\mathbb{R}^{3}$. \textbf{Теневым контуром тела}
- $K$ на плоскости $\pi$, проходящей через начало координат $O$, называется
- граница образа тела $K$ при отображении проецирования на плоскость $\pi$.
+ Пусть $\nu = (\nu_{x}, \nu_{y}, \nu_{z}) \in \mathbb{R}^{3}$ -- некоторый
+ вектор в $\mathbb{R}^{3}$ и пусть $\pi$ -- плоскость, задаваемая уравнением
+ $\nu_{x} x + \nu_{y} y + \nu_{z} z = 0$, т. е. плоскость, проходящая через
+ начало координат $O$ и имеющая нормаль $\nu$. \textbf{Теневым контуром по
+ направлению $\nu$} называется всякий теневой контур на плоскости $\pi$.
 \end{SmartDefinition}
 
-Пусть $K$ -- некоторое тело в $\mathbb{R}^{3}$. Пусть $C_{1}^{*}, C_{2}^{*},
-\ldots, C_{m}^{*}$ -- теневые контуры тела $K$ (\textbf{точные теневые
-контуры}). Пусть $C_{1}, C_{2}, \ldots, C_{m}$ -- теневые контуры, являющиеся
-приближениями соответствующих теневых контуров тела $K$ (\textbf{неточные
-теневые контуры}):
+\begin{SmartDefinition}
+ Пусть $K$ - некоторое тело в $\mathbb{R}^{3}$ и пусть $\pi$ -- некоторая
+ плоскость в $\mathbb{R}^{3}$. \textbf{Теневым контуром тела $K$ на плоскости
+ $\pi$}, называется граница образа тела $K$ при отображении проецирования на
+ плоскость $\pi$. Будем обозначать его через $C_{\pi}(K)$.
+\end{SmartDefinition}
 
-\begin{equation}
- C_{1}^{*} \approx C_{1}, \;\;\;
- C_{2}^{*} \approx C_{2}, \;\;\;
- \ldots, \;\;\;
- C_{m}^{*} \approx C_{m}
-\end{equation}
+\begin{SmartDefinition}
+ Пусть $K$ - некоторое тело в $\mathbb{R}^{3}$ и пусть $\nu = (\nu_{x},
+ \nu_{y}, \nu_{z}) \in \mathbb{R}^{3}$ -- некоторый вектор в $\mathbb{R}^{3}$.
+ \textbf{Теневым контуром тела $K$ по направлению  $nu$} называется теневой
+ контур тела $K$ на плоскости $\pi$, задаваемой уравнением
+ $\nu_{x} x + \nu_{y} y + \nu_{z} z = 0$, т. е. на плоскости, проходящей через
+ начало координат $O$ и имеющей нормаль $\nu$. Будем обозначать его через
+ $C_{\nu}(K)$
+\end{SmartDefinition}
+
+\begin{SmartDefinition}
+ \textbf{Задачей восстановления трехмерного тела} называется конечный набор пар
+ $\mathfrak{C} = \left\{(\nu_{i}, C_{i})\right}_{i = 1}^{m}$, где $\nu_{1},
+ \nu_{2}, \ldots, \nu_{m}$ -- некоторый набор векторов в $\mathbb{R}^{3}$,
+ называемых векторами проецирования, и $C_{i}$ есть некоторый теневой контур 
+ по направлению $\nu_{i}$ для каждого $i = 1, 2, \ldots, m$.
+\end{SmartDefinition}
+
+\begin{SmartDefinition}
+ Задача восстановления трехмерного тела
+ $\mathfrak{C} = \left\{(\nu_{i}, C_{i})\right}_{i = 1}^{m}$ называется
+ \textbb{тривиальной}, если существует такое трехмерное геометрическое тело $K$
+ такое, что $C_{\nu_{i}}(K) = C_{i}$ для всех $i = 1, 2, \ldots, m$, т. е.
+ теневым контуром тела $K$ по направлению $\nu_{i}$ является теневой контур
+ $C_{i}$
+\end{SmartDefinition}
 
 
 \subsection{Двойственная формулировка проблемы}
