[DOC] tech-report: finalize difinition of primal problem

--- a/Documentation/i.palachev/Thesis/TechnicalReport/TechnicalReport.tex
+++ b/Documentation/i.palachev/Thesis/TechnicalReport/TechnicalReport.tex
@@ -435,6 +435,8 @@ $\delta(\mathfrak{F})$. Пусть оно представляет собой н
  \nu_{2}, \ldots, \nu_{m}$ -- некоторый набор векторов в $\mathbb{R}^{3}$,
  называемых векторами проецирования, и $C_{i}$ есть некоторый теневой контур 
  по направлению $\nu_{i}$ для каждого $i = 1, 2, \ldots, m$.
+ Если все контуры $C_{i}$ являются выпуклыми многоугольниками, то задача
+ $\mathfrak{C}$ называется \textbf{выпуклой}.
 \end{SmartDefinition}
 
 \begin{SmartDefinition}
@@ -443,9 +445,35 @@ $\delta(\mathfrak{F})$. Пусть оно представляет собой н
  \textbf{тривиальной}, если существует такое трехмерное геометрическое тело $K$
  такое, что $C_{\nu_{i}}(K) = C_{i}$ для всех $i = 1, 2, \ldots, m$, т. е.
  теневым контуром тела $K$ по направлению $\nu_{i}$ является теневой контур
- $C_{i}$
+ $C_{i}$. Всякое такое геометрическое тело $K$, которое отвечает данным
+ условиям, называется \textbf{решением тривиальной задачи восстановления}
+ $\mathfrak{C}$
 \end{SmartDefinition}
 
+Ввиду того, что на практике входные данные являются измерениями теневых
+контуров, выполненных с погрешностью, как правило все входные данные таковы,
+что соответствующие им задачи восстановления не являются тривиальными. В данной
+работе будет приведен критерий тривиальности задачи восстановления, который
+удобно формулировать в терминах опорной функции. По сути одной из ключевых идей
+данной работы является следующий подход к решению задач восстановления:
+
+\begin{itemize}
+ \item Тривиальные задачи восстановления решаются за линейное время
+ \item Нетривиальные задачи можно сводить к \textit{близким} к ним тривиальным
+ задачам.
+\end{itemize}
+
+Такой подход автоматически создает две проблемы:
+
+\begin{itemize}
+ \item Если нетривиальная задача имеет несколько решений, то какое из них
+ следует предпочесть?
+ \item Каким образом следует определить отношение близости между задачами
+ восстановления, чтобы научиться сводить нетривиальные задачи к тривиальным?
+\end{itemize}
+
+Ответ на оба этих вопроса, а также их обоснование с точки зрения приложения,
+будет рассмотрено в следующих разделах.
 
 \subsection{Двойственная формулировка проблемы}
 
