[DOC] tech-report: add primary consistecy criterion

--- a/Documentation/i.palachev/Thesis/TechnicalReport/TechnicalReport.tex
+++ b/Documentation/i.palachev/Thesis/TechnicalReport/TechnicalReport.tex
@@ -1,5 +1,5 @@
 
-% Copyright (c) 2009-20134 Ilya Palachev <iliyapalachev@gmail.com>
+% Copyright (c) 2009-2014 Ilya Palachev <iliyapalachev@gmail.com>
 
 % Declare the class of document: size of paper, size of font, and etc.
 % Type of the document is "article".
@@ -473,11 +473,60 @@ $\delta(\mathfrak{F})$. Пусть оно представляет собой н
 \end{itemize}
 
 Ответ на оба этих вопроса, а также их обоснование с точки зрения приложения,
-будет рассмотрено в следующих разделах.
+будут рассмотрены в следующих разделах.
+
+\begin{SmartDefinition}
+ Пусть $\mathfrak{C} = \left\{(\nu_{i}, C_{i})\right\}_{i = 1}^{m}$ -- задача
+ восстановления трехмерного тела. Набор теневых контуров
+ $\{C_{1}, C_{2}, \ldots, C_{m}\}$ называется \textbf{согласованным}, если
+ $\mathfrak{C}$ -- тривиальная задача восстановления, в противном случае он
+ называется \textbf{несогласованным}.
+\end{SmartDefinition}
+
+\begin{SmartDefinition}
+ Пусть $C$ -- теневой контур по направлению $\nu$. Он делит плоскость, в которой
+ лежит, на две части: ограниченную, которую обозначим через $In C$ и
+ неограниченную, которую обозначим $Out C$.
+ \textbf{Теневым цилиндром, соответствующим теневому контуру} $C$, называется
+ цилиндр
+ \begin{equation}
+  Cyl(C) = \{ x \in \mathbb{R}^{3}, x = y + t * \nu \; | \;
+  y \in \overline{In C}, \; t \in \mathbb{R} \}
+ \end{equation}
+ где $\overline{In C}$ -- замыкание $In C$
+\end{SmartDefinition}
+
+Из приведенных выше определений непосредственно следует следующее утверждение:
+
+\begin{SmartLemma}
+ Пусть $\{C_{1}, C_{2}, \ldots, C_{m}\}$ -- некоторый набор теневых контуров.
+ Для каждого $i = 1, 2, \ldots, m$ обозначим через
+ $\pi_{i, j}, j = 1, 2, \ldots, m_{i}$ плоскости граней теневого цилиндра
+ $Cyl(C_{i})$. При этом будем считать, что каждый цилиндр лежит по положительную
+ сторону от всех своих плоскостей. Обозначим также через
+ $l_{i, j} = \pi_{i, j} \cap \pi_{i, j + 1}$, т. е. прямые являющиеся ребрами
+ теневого цилиндра $Cyl(C_{i})$.
+ Набор теневых контуров $\{C_{1}, C_{2}, \ldots, C_{m}\}$ является согласованным
+ тогда и только тогда, когда существует такой многогранник $K$, который для
+ каждого $i = 1, 2, \ldots, m$ и $j = 1, 2, \ldots, m_{i}$ удовлетворяет
+ следующим условиям:
+ \begin{enumerate}
+  \item $K$ лежит по положительную сторону от плоскости $\pi_{i, j}$
+  \item Существует последовательность $A_{1} A_{2} \ldots A_{k}$ вершин
+  многогранника $K$ такая, что для всех $s = 1, 2, \ldots, k - 1$ отрезок
+  $A_{s} A_{s + 1}$ является ребром многогранника $K$, при этом все точки
+  последовательности лежат в в плоскости $\pi_{i, j}$, а концевые точки 
+  последовательности лежат на ребрах теневого цилиндра:
+  $A_{1} \in l_{i, j - 1}$ и $A_{k} \in l_{i, j}$.
+ \end{enumerate}
+\end{SmartLemma}
+
+
 
 \subsection{Двойственная формулировка проблемы}
 
-\subsection{Критерий согласованности теневых контуров}
+Как уже было сказано, все утверждения предыдущих двух параграфов можно
+переформулировать в терминах двойственности.
 
 \subsection{Обобщение для случая бликовых контуров}
 
