[DOC] tech-report: fix typo ; nonconvex case -> to separate section

--- a/Documentation/i.palachev/Thesis/TechnicalReport/TechnicalReport.tex
+++ b/Documentation/i.palachev/Thesis/TechnicalReport/TechnicalReport.tex
@@ -565,6 +565,8 @@ $\delta(\mathfrak{F})$. Пусть оно представляет собой н
  представлять собой искомое тело.
 \end{SmartTheorem}
 
+Данная теорема допускает обобщение на случай невыпуклых теневых контуров,
+доказательство которого мы приведем в одной из последующих глав.
 
 \begin{SmartTheorem}
  Пусть $\{C_{1}, C_{2}, \ldots, C_{m}\}$ -- некоторый набор теневых контуров
@@ -578,7 +580,7 @@ $\delta(\mathfrak{F})$. Пусть оно представляет собой н
  могут представлять из себя контуры, имеющие самопересечения).
  Тогда набор контуров $\{C_{1}, C_{2}, \ldots, C_{m}\}$ является согласованным
  тогда и только тогда, когда существует локально выпуклый многогранник $K$
- такой, что контуры $D_{1}, D_{2}, \ldots, \D_{m}$ лежат на его границе и
+ такой, что контуры $D_{1}, D_{2}, \ldots, D_{m}$ лежат на его границе и
  ребра этих контуров являются ребрами многогранника.
 \end{SmartTheorem}
 
@@ -630,10 +632,11 @@ $\delta(\mathfrak{F})$. Пусть оно представляет собой н
 \subsection{Предварительная кластеризация и сведение к опорной задаче
 вершинного восстановления}
 
-\subsection{Учет невыпуклости в теневых контурах}
+
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
+\section{Обобщение на невыпуклый случай}
 
 \newpage
 \bibliographystyle{plain}
