[DOC] tech-report: begin blink contours defintions

--- a/Documentation/i.palachev/Thesis/TechnicalReport/TechnicalReport.tex
+++ b/Documentation/i.palachev/Thesis/TechnicalReport/TechnicalReport.tex
@@ -565,6 +565,8 @@ $\delta(\mathfrak{F})$. Пусть оно представляет собой н
  представлять собой искомое тело.
 \end{SmartTheorem}
 
+%% TODO: Привести строгое формальное доказательство теоремы.
+
 Данная теорема допускает обобщение на случай невыпуклых теневых контуров,
 доказательство которого мы приведем в одной из последующих глав.
 
@@ -584,10 +586,58 @@ $\delta(\mathfrak{F})$. Пусть оно представляет собой н
  ребра этих контуров являются ребрами многогранника.
 \end{SmartTheorem}
 
-
-
-
 \subsection{Обобщение для случая бликовых контуров}
+
+Задача восстановления трехмерного тела по теневым проекциям имеет обобщение,
+связанное с тем, что эмпирическим путем может быть получена дополнительная
+информация о расположении граней -- это так называемые
+\textit{бликовые контуры}. Они могут быть получены с помощью регистрации
+отраженных бликов граней при отражении пучка света от поверхности кристалла.
+
+В отличие от теневых контуров, бликовые контуры несут в себе информацию строго
+о расположении только одной грани, причем заранее неизвестно какой грани.
+
+Определения бликового контура трехмерного тела на плоскости, по направлению,
+а также определение бликового цилиндра производятся очень похожим образом, как
+для теневых контуров, за исключением того, что бликовые контуры не обязательно
+должны содержать начало координат в ограничиваемой им области на плоскости.
+
+
+\begin{SmartDefinition}
+ Пусть $\pi$ -- некоторая плоскость в $\mathbb{R}^{3}$. \textbf{Бликовым
+ контуром на плоскости $\pi$} называется всякая простая ломаная
+ $C = A_{1} A_{2} \ldots A_{n}$ (т. е. ломаная без самопересечений) с конечным
+ числом вершин, лежащая в плоскости $\pi$ таким образом, что ограниченная этой
+ ломаной область в плоскости $\pi$ содержит начало координат $O$.
+\end{SmartDefinition}
+
+\begin{SmartDefinition}
+ Пусть $\nu = (\nu_{x}, \nu_{y}, \nu_{z}) \in \mathbb{R}^{3}$ -- некоторый
+ вектор в $\mathbb{R}^{3}$ и пусть $\pi$ -- плоскость, задаваемая уравнением
+ $\nu_{x} x + \nu_{y} y + \nu_{z} z = 0$, т. е. плоскость, проходящая через
+ начало координат $O$ и имеющая нормаль $\nu$. \textbf{Бликовым контуром по
+ направлению $\nu$} называется всякий бликовый контур на плоскости $\pi$.
+\end{SmartDefinition}
+
+\begin{SmartDefinition}
+ Пусть $K$ - некоторое тело в $\mathbb{R}^{3}$, пусть $f$ -- некоторая его
+ грань и пусть $\pi$ -- некоторая плоскость в $\mathbb{R}^{3}$.
+ \textbf{Бликовым контуром грани $f$ тела $K$ на плоскости $\pi$} называется
+ граница образа грани $f$ при отображении проецирования на плоскость $\pi$.
+ Будем обозначать его через $C_{\pi}(f)$.
+\end{SmartDefinition}
+
+\begin{SmartDefinition}
+ Пусть $K$ - некоторое тело в $\mathbb{R}^{3}$, пусть $f$ -- некоторая его
+ грань и пусть $\nu = (\nu_{x}, \nu_{y}, \nu_{z}) \in \mathbb{R}^{3}$ --
+ некоторый вектор в $\mathbb{R}^{3}$.
+ \textbf{Бликовым контуром грани $f$ тела $K$ по направлению  $nu$} называется
+ бликовый контур тела $K$ на плоскости $\pi$, задаваемой уравнением
+ $\nu_{x} x + \nu_{y} y + \nu_{z} z = 0$, т. е. на плоскости, проходящей через
+ начало координат $O$ и имеющей нормаль $\nu$. Будем обозначать его через
+ $C_{\nu}(f)$
+\end{SmartDefinition}
+
 
 \subsection{Образы одной вершины на разных контурах}
 
