[DOC] tech-report: a bit more text about blink contours

--- a/Documentation/i.palachev/Thesis/TechnicalReport/TechnicalReport.tex
+++ b/Documentation/i.palachev/Thesis/TechnicalReport/TechnicalReport.tex
@@ -638,8 +638,43 @@ $\delta(\mathfrak{F})$. Пусть оно представляет собой н
  $C_{\nu}(f)$
 \end{SmartDefinition}
 
+Аналогичным образом определяется и задача восстановления трехмерного тела по
+теневым и бликовым контурам -- как набор направлений и контуров, им
+соответствующих.
+
+Интересным представляется следующий вопрос: каким образом понятие бликового
+контура формулируется в двойственном пространстве? Очевидно, что грань $f$
+многогранника $P$ соответствует бликовому контуру $C$ тогда  и только тогда,
+когда вершины грани $f$ лежат на ребрах бликового цилиндра $Cyl(C)$, то есть
+на лежат на паре последовательных граней этого цилиндра. Поскольку в
+двойственной постановке все точки перейдут в плоскости, а плоскости -- в точки,
+грань $f$ и ее вершины $A_{1}, \ldots, A_{s}$ перейдут в вершину $\delta(f)$ и
+грани $\delta(A_{1}), \ldots, \delta(A_{s})$, инцидентные этой вершине.
+Бликовый цилиндр, как бесконечный объект, перейдет в многоугольник, лежащий в
+плоскости, ортогональной образующим цилиндра и проходящей через начало координат
+(это доказывается аналогично случаю теневого цилиндра), при этом грани бликового
+цилиндра $\pi_{1}, \pi_{2}, \ldots, \pi_{s}$ перейдут в вершины этого
+многоугольника $\delta(\pi_{1}), \delta(\pi_{2}), \ldots, \delta(\pi_{s})$.
+Обозначим ребра $e_{1} = \delta(A_{1}) \cap \delta(A_{2}),
+e_{2} = \delta(A_{2}) \cap \delta(A_{3}), \ldots,
+e_{s} = \delta(A_{s}) \cap \delta(A_{1})$. Тогда условие соответствия грани $f$
+многогранника $P$ в двойственном пространстве формулируется как условие того,
+что точки $\delta(\pi_{1}), \delta(\pi_{2}), \ldots, \delta(\pi_{s})$ лежат на
+ребрах $e_{1}, e_{2}, \ldots, e_{s}$ соответственно.
+
+%% TODO: Добавить иллюстрацию здесь, а то много текста трудно для восприятия...
 
 \subsection{Образы одной вершины на разных контурах}
+
+Очевидно, что одна и та же вершина при фотографировании камня может иметь образы
+на нескольких теневых контурах сразу. Вне всякого сомнения, это определенным
+образом должно отразиться на свойствах полученных контуров. Такая ситуация
+характеризуется тем, что несколько (более одного) ребер последовательных теневых
+цилиндров пересекаются в одной точке. Существуют методы, которые позволяют
+находить с помощью кластеризации подобные вершины, и по ним восстанавливать
+трехмерные модели.
+
+
 
 \subsection{Разрешение нарушений плоскостности при подвижке вершины}
 
