[DOC] tech-report: add description of illustration BlinkContourDual

--- a/Documentation/i.palachev/Thesis/TechnicalReport/TechnicalReport.tex
+++ b/Documentation/i.palachev/Thesis/TechnicalReport/TechnicalReport.tex
@@ -658,9 +658,35 @@ $\delta(\mathfrak{F})$. Пусть оно представляет собой н
 Обозначим ребра $e_{1} = \delta(A_{1}) \cap \delta(A_{2}),
 e_{2} = \delta(A_{2}) \cap \delta(A_{3}), \ldots,
 e_{s} = \delta(A_{s}) \cap \delta(A_{1})$. Тогда условие соответствия грани $f$
-многогранника $P$ в двойственном пространстве формулируется как условие того,
-что точки $\delta(\pi_{1}), \delta(\pi_{2}), \ldots, \delta(\pi_{s})$ лежат на
-ребрах $e_{1}, e_{2}, \ldots, e_{s}$ соответственно.
+многогранника $P$ бликовому контуру $C$ в двойственном пространстве
+формулируется как условие того, что точки
+$\delta(\pi_{1}), \delta(\pi_{2}), \ldots, \delta(\pi_{s})$ лежат на ребрах
+$e_{1}, e_{2}, \ldots, e_{s}$ соответственно. Иными словами, двойственный образ
+бликового контура многогранника всегда представляет собой некоторую часть
+сечения двойственного многогранника.
+
+\begin{figure}[ht]
+ \includegraphics[width=10cm]{images/BlinkContourDual.jpg}
+ \caption{Образ бликового контура при преобразовании двойственности.}
+ \label{BlinkContourDual}
+\end{figure}
+
+Приведенный выше критерий можно проиллюстрировать с помощью рисунка
+\ref{BlinkContourDual}. Заметим, что обозначенное на нижнем рисунке красным
+цветом сечение не проходит ни через одну вершину двойственного многогранника.
+Это связано с тем, что в противном случае одна из плоскостей граней исходного
+многогранника обязана была бы быть плоскостью бликового цилиндра, что
+невозможно.
+
+В этом заключается принципиальное отличие бликовых и теневых контуров:
+вершины двойственных образов теневых контуров являются вершинами двойственного
+многогранника, а вершины бликовых контуров -- нет. Причиной тому является тот
+факт, что мы неявно предполагаем, что каждый теневой цилиндр составлен из
+плоскостей граней искомого многогранника. Безусловно, такое предположение не
+имеет места в реальности, поскольку при фотографировании одно и то же ребро
+появляется на нескольких кадрах сразу, и почти наверное можно сказать, что ни на
+одном кадре нет скользящей проекции ребра вдоль какой-нибудь инцидентной ему
+грани.
 
 %% TODO: Добавить иллюстрацию здесь, а то много текста трудно для восприятия...
 
