[DOC] tech-report: add begin of section about support methods

--- a/Documentation/i.palachev/Thesis/TechnicalReport/TechnicalReport.tex
+++ b/Documentation/i.palachev/Thesis/TechnicalReport/TechnicalReport.tex
@@ -1,4 +1,3 @@
-
 % Copyright (c) 2009-2014 Ilya Palachev <iliyapalachev@gmail.com>
 
 % Declare the class of document: size of paper, size of font, and etc.
@@ -960,7 +959,63 @@ $A_{1} A_{2} A_{6} A_{5}, A_{2} A_{3} A_{7} A_{6}, A_{4} A_{5} A_{6} A_{7}$,
 \section{Опорные методы и опорные задачи восстановления выпуклых
 тел (исторический обзор)}
 
-\subsection{Понятие опорной функции выпуклого тела}
+В предыдущем разделе мы пытались рассматривать различные интерпретации входных
+данных задачи восстановления трехмерного тела, назвали эти данные
+\textit{задачами восстановления}. Однако строгого понятия \textit{решения
+задачи восстановления} дано не было. В первую очередь это обусловлено самой
+сущностью прикладной задачи, в которой строгого понимания, какой именно объект
+в конечном счете нужно получить, -- нет. На практике требуется получить
+тело, которое бы наилучшим образом приближало исходное (с точки зрения
+близости в евклидовой метрике между вершинами, ребрами и гранями исходного и
+восстановленного многогранников), -- с одной стороны, а с другой -- которое бы
+повторяло основные топологические особенности тела.
+
+Оказывается, существуют такие ситуации, когда эти две цели не могут быть
+удовлетворены одновременно. На практике часто возникают ситуации, когда
+построенная модель близко расположена к требуемым позициям в пространстве,
+однако вместо одной крупной грани в ней присутствуют несколько более
+мелких, или когда вместо одной вершины с большим числом инцидентных ей
+ребер (т. е. высокой степени), однако в модели вместо одной вершины присутствуют
+несколько близко расположенных вершин меньшей степени.
+
+Любая математическая формализация задачи приводит к упрощению, если мы
+формулируем задачи, которые можно эффективно решить с помощью существующих
+вычислительных методов. Поэтому целесообразным выглядит подход, когда
+предлагается \textit{несколько вариантов решения}, а пользователь программного
+пакета имеет возможность выбирать среди них, а еще лучше -- "усреднять"
+различные решения между собой, чтобы получить такое, которое бы
+было бы удовлетворительно с точки зрения сразу нескольких критериев качества
+модели.
+
+В результате обзора некоторого количества статей из математических и
+физических журналов по геометрической томографии, мат. статистике и компьютерной
+геометрии было замечено сходство изучаемой задачи с теми, которые
+рассматриваются в тех статьях. А именно, было замечено, что входные данные
+задачи восстановления моделей алмазов можно переформулировать в терминах входных
+данных некоторых задач геометрической томографии. Поскольку в этой смежной
+области уже был накоплен заметный опыт решения подобных задач, мы попытались
+перенять его, и чтобы это сделать, а также понять, насколько ценными будут
+полученные алгоритмы, мы постарались ответить на следующие вопросы:
+
+\begin{enumerate}
+ \item Какие формализации задачи восстановления геометрических тел существуют в
+геометрической томографии?
+ \item Какие решения поставленных задач могут быть построены с помощью
+разработанных методов?
+ \item Каким образом можно интерпретировать нашу исходную задачу восстановления
+тела по теневым (а также бликовым) контурам как задачу, которую можно решить с
+помощью разработанных методов?
+ \item Какую практическую ценность будут иметь полученные результаты?
+ \item Можно ли модифицировать разработанные методы таким образом, чтобы
+повысить ценность этих результатов?
+\end{enumerate}
+
+Если смотреть с точки зрения этого плана, то в предыдущем разделе мы несколько
+забежали вперед, -- а именно, уже введен основной геометрический аппарат этих
+статей, и на его основе произведено несколько попыток интерпретации исходной
+задачи. В настоящем разделе мы постараемся осветить первые два пункта плана, а
+в следующем -- приведем идею, позволяющую оптимизировать имеющиеся алгоритмы с
+точки зрения быстродействия, а в еще одном разделе -- ответим на третий вопрос.
 
 \subsection{Опорные задачи}
 
