[DOC] tech-report: add 1st subsection about efiicient consistency criterion

--- a/Documentation/i.palachev/Thesis/TechnicalReport/TechnicalReport.tex
+++ b/Documentation/i.palachev/Thesis/TechnicalReport/TechnicalReport.tex
@@ -2530,10 +2530,84 @@ $\widehat{P_{k}} = hull(\widehat{x_{1}}, \ldots, \widehat{x_{k}})$, которо
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
+\newpage
 \section{Эффективный критерий согласованности опорных данных}
 
+Основной причиной неэффективности разработанных методов восстановления
+выпуклого тела в трехмерном случае является большое число ограничений в
+получаемой задаче квадратичного программирования. При первом подходе число
+ограничений хотя и является приемлемым, однако нахождение явного вида
+ограничений представляет из себя задачу, более трудоемкую, чем основная задача.
+При втором подходе, наоборот, ограничения выписываются в явном виде сразу,
+однако их число является квадратичным.
+
+Было, однако, замечено, что с помощью преобразования двойственности можно
+свести задачу нахождения ограничений к задаче нахождения сертификатов
+выпуклости многогранника. Тем самым мы покажем, что:
+
+\begin{enumerate}
+ \item Можно в явном виде за время $O(n log n)$ найти набор линейных
+ограничений, задающих условия согласованности набора опорных чисел.
+ \item Полученный набор ограничений является эффективным, т. е. любой набор
+ограничений, задающих опорный конус, должен содержать в себе его, и никакое
+ограничение не может быть отброшено.
+ \item Число полученных ограничений не должно превышать $6 n$.
+\end{enumerate}
+
+Перед доказательством этих фактов, приведем здесь некоторые утверждения из
+вычислительной геометрии о наборе сертификатов выпуклости многогранника.
+
+\newpage
 \subsection{Критерий выпуклости многогранника}
 
+Для дальнейшего изложения потребуется привести критерий выпуклости
+произвольного многогранника. Один из таких критериев представлен в статье
+Mehlhorn, Näher, Schilz, Schirra, Seel, Seidel, Uhrig
+\cite{conf/compgeom/MehlhornNSSSSU96}. Критерий основан на классическом
+результате Адамара:
+
+\begin{SmartTheorem}
+\textbf{(Теорема Адамара)} Пусть $\mathit{F}$ есть гладкая компактная
+поверхность $\mathbb{R}^{d}$ без границы и пусть $d > 2$. Тогда если
+$\mathit{F}$ локально выпукло  в каждой своей точке, то $\mathit{F}$ есть
+поверхность некоторого выпуклого тела.
+\end{SmartTheorem}
+
+Напрямую эту теорему нельзя применить к многогранникам, поскольку поверхность
+многогранника не является гладкой. Специфику многогранников учитывает
+следующий критерий:
+
+\begin{SmartTheorem}
+Пусть $\mathit{F}$ есть симплициальная $(d - 1)$-мерная поверхность без
+границы в $\mathbb{R}^{d}$, которая является согласованно ориентированной,
+пусть $o$ есть центр масс вершин поверхности $\mathit{F}$ и пусть $p$ есть
+центр масс некоторой грани $\mathit{F}$. Тогда $\mathit{F}$ является
+поверхностью некоторого выпуклого тела тогда и только тогда, когда выполнены
+следующие условия:
+\begin{enumerate}
+  \item $\mathit{F}$ локально выпукло во всех своих ребрах
+  \item $o$ лежит по неотрицательную сторону относительно всех граней
+  $\mathit{F}$
+  \item луч, исходящий из точки $o$ и проходящий через точку $p$ пересекает
+  только плоскость, содержащую $p$
+\end{enumerate}
+\end{SmartTheorem}
+
+Авторы статьи \cite{conf/compgeom/MehlhornNSSSSU96} использовали этот
+результат для приведения примера, каким образом можно проверять
+результат работы геометрических алгоритмов при разработке программного
+обеспечения. Так, для проверки алгоритма вычисления выпуклой оболочки
+производился тест на выпуклость полученного многогранника, состоящий из так
+называемых \textbf{сертификатов} -- условий, гарантирующих выпуклость
+многогранника.
+
+Мы покажем, что условия выпуклости есть не что иное, как двойственная
+формулировка условий согласованности опорных чисел, и тем самым покажем, что
+число этих ограничений является линейным (поскольку число ограничений равно
+числу ребер). С помощью теоремы Эйлера можно доказать приведенную в начале
+раздела оценку числа ограничений.
+
+\newpage
 \subsection{Связь между локальной согласованностью опорных данных и выпуклостью
 многогранника в ребре}
 
