[DOC] tech-report: add introductional part

--- a/Documentation/i.palachev/Thesis/TechnicalReport/TechnicalReport.tex
+++ b/Documentation/i.palachev/Thesis/TechnicalReport/TechnicalReport.tex
@@ -83,16 +83,229 @@
 \subsection{Исходная практическая проблема восстановления моделей алмазов по
 теневым и бликовым контурам}
 
+Поводом для написания данной работы послужила практическая задача построения
+моделей физических многогранников по их теневым и бликовым контурам. Такая
+задача возникает, например, в моделировании драгоценных камней, когда
+полученные модели используются для ускорения процесса их изучения, оценки и
+огранки.
+
+Исходным данными задачи восстановления тела являются следующие данные:
+
+\begin{enumerate}
+ \item Теневые контуры
+ \item Бликовые контуры
+\end{enumerate}
+
+Теневые контуры а практике получаются следующим образом. Камень ставится на
+некоторую (горизонтальную) подставку своей нижней гранью, и фотографируется.
+Затем подставка поворачивается на некоторый небольшой угол, и камень
+фотографируется снова. Этот повторяется до тех пор, пока камень не повернется
+на полный угол. Таким образом, получаются фотографии камня, сделанные по
+направлениям, образующим углы
+
+\begin{equation}
+ \alpha_{1}, \alpha_{2}, \ldots, \alpha_{i}, \ldots, \alpha_{M},
+\end{equation}
+
+где
+
+\begin{equation}
+ \alpha_{i} = \frac{2 \pi i}{M}, i = 1, 2, \ldots, M
+\end{equation}
+
+Каждая фотография несет в себе только информацию о тени многогранника, т. к.
+внутренние ребра на снимках не видны. В научной литературе часто такие
+изображения называют силуэтами многогранников.
+% TODO: Добавить сюда ссылки на статьи, в которых имеются понятия силуэта
+% многогранника.
+
+Каждая фотография подвергается обработке (поскольку в исходном виде все
+фотографии являются растровыми изображениями с размытыми границами теней), в
+результате которой получаются многоугольники, представляющие собой границу
+затененных и осветленных частей фотографий. Такие многоугольники называются
+\textbf{теневыми контурами}.
+
+Поскольку фотографирование производится по всем углам полного угла с некоторым
+небольшим шагом, таким, что общее число фотографий является четным числом, то
+фактически те теневые контуры, номера которых отличаются на $\frac{M}{2}$ по
+модулю $M$, должны совпадать. На практике же они различаются из-за погрешностей
+измерений. Чтобы понизить влияние измерительной погрешности, пары
+соответствующих теневых контуров усредняются. Таким образом, в результате
+предобработки получаются теневые контуры, соответствующие углам
+фотографирования
+
+% TODO: А в наших входных данных такая предобработка сделана? Проверить!
+% Добавить автоматическую проверку в программу.
+
+\begin{equation}
+ \alpha_{i} = \frac{2 \pi i}{M}, i = 1, 2, \ldots, \frac{M}{2}
+\end{equation}
+
+В дальнейшем для удобства будем обозначать $M = 2 N$, и тогда углы
+фотографирования будут представлять из себя следующее:
+
+\begin{equation}
+ \alpha_{i} = \frac{\pi i}{N}, i = 1, 2, \ldots, N
+\end{equation}
+
+Совместно с теневым фотографированием в моделировании драгоценных камней
+применяется также и фотографирование бликов камней. Поскольку поверхность
+изучаемых тел способна отражать падающий на поверхность ее граней свет, можно
+получать фотографии бликов отдельных граней. В отличие от теневых фотографий,
+которые позволяют получать изображение камня \textit{в целом}, бликовые снимки
+представляют информацию о положении только одной конкретной грани. Эта
+особенность позволяет повысить точность определения местоположения основных
+(крупных) граней.
+
+Бликовые снимки также подвергаются преодобработке, в результате которых
+получаются так называемые \textbf{бликовые контуры}.
+
 \subsection{Описание технологии построения моделей алмазов}
+
+После получения эмпирических данных о камне, полученная информация используется
+для построения трехмерной модели камня. Построенная модель должна удовлетворять
+сразу трем критериям качества:
+
+\begin{enumerate}
+ \item Метрическая близость к входным данным
+ \item Топологическое сходство с исходным телом.
+ \item Плоскостность 
+\end{enumerate}
+
+Под \textbf{метрической близостью} многогранника к эмпирическим данным здесь
+понимается близость в смысле некоторой функции $\rho$, определяемой как
+
+% TODO: Не соответствует ли такая функция некоторому уже существующему
+% математическому термину (псевдометрика и т. п.)? Проверить!
+
+\begin{equation}
+ \rho : \mathfrak{P} \times \mathfrak{C} \to \mathbb{R}_{+}
+\end{equation}
+
+где $\mathfrak{P}$ -- множество всех пространственных многогранников в
+$\mathbb{R}^{3}$, $\mathfrak{C}$ -- множество всех контуров, $\mathbb{R}_{+}$
+-- множество положительных действительных чисел.
+
+Функция $\rho$ должна принимать тем меньшие значения, чем больше многогранник
+соответствует контуру. В зависимости от математической постановки задачи можно
+выбирать разные определения функции $\rho$, но в предельной форме все возможные
+ее варианты должны быть эквивалентны. В последующих разделах мы покажем
+различные способы определения функции близости.
+
+Под \textbf{топологическим сходством} здесь понимается то, что между вершинами,
+ребрами и гранями реального физического тела (или по крайней мере, между
+\textit{основными}, или \textit{характерным} вершинами, ребрами и гранями) и
+вершинами, ребрами и гранями восстановленного модельного многогранника
+существует взаимно-однозначное соответствие. Если говорить более строго, то
+между структурами инцидентности реального и восстановленного тела должен
+существовать изоморфизм.
+
+Плохой моделью в смысле топологического сходства является та модель, в которой,
+например, для одной вершины реального тела большой степени (т. е. инцидентной
+большому числу ребер) соответствует несколько близко расположенных вершин,
+соединенных фиктивными ребрами.
+
+% TODO: Добавить сюда 2 картинки с хорошо и плохо восстановленной вершиной
+% большой степени.
+
+Также плохой практикой является такой случай, когда одна большая грань
+реального тела в модели разбивается на несколько граней меньшего размера.
+
+% TODO: Добавить сюда 2 картинки с хорошо и плохо восстановленной гранью
+% большого размера.
+
+Под \textit{плоскостностью} здесь понимается то, что вершины одной грани должны
+лежать в плоскости этой грани. С точки зрения модели это означает, что
+расстояние от вершины до грани, в которой она лежит (как это объявлено в
+структуре инцидентности), должно быть малым.
+
+На практике как правило задают некоторую фиксированную величину
+$\varepsilon_{0}$, определяющую максимально допустимое отклонение грани от
+плоскостности. Если это отклонение нарушается в некоторой грани, то может
+потребоваться коррекция модели, при которой может измениться положение вершин,
+ребер и граней, а может -- даже и сама структура инцидентности.
+
+Было замечено, что между приведенными выше тремя критериями существует
+некоторая двойственность. Иными словами, нельзя построить такую модель, которая
+бы одновременно хорошо удовлетворяла всем трем критериям. То есть модель,
+метрически близкая к эмпирическим данным, может иметь много топологических
+различий с исходным телом, а топологически схожая модель может плоха с точки
+зрения метрической близости и плоскостности.
+
+Такая сторона дела побуждает к рассмотрению различных подходов к восстановлению
+тел. В данной работе мы попробуем сначала построить такие методы, которые бы по
+отдельности могут строить тела, хорошо удовлетворяющие не всем критериям, но
+простым с точки зрения математической постановки задачи. Затем будет
+произведена попытка скомбинировать эти подходы таким образом, чтобы получить
+некоторый универсальный метод.
 
 \subsection{Погрешности в теневых контурах и их последствия}
 
+Как и любые эмпирические данные, теневые и бликовые контуры получаются с
+помощью физических измерительных установок, и следовательно, получаются с
+некоторой погрешностью. Насколько критичной может быть эта погрешность?
+Каким образом она возникает? - Такие вопросы нужно иметь в виду, чтобы
+правильно разработать алгоритм восстановления.
+
+Например, подставка, на которой закрепляется камень, вращается с помощью
+подшипника. Такое устройство приводит к тому, что в реальности во время
+поворота подставка еще и отклоняется на некоторый угол от вертикальной оси.
+В результате в контурах возникает систематическая погрешность.
+
 \subsection{Можно ли корректировать теневые контуры?}
 
-\subsection{Смежные проблемы в компьютерной томографии, магнитно-резонансной
-визуализации и обработке данных лазерного радара}
+Данный вопрос представляет собой нечто такое, что может показаться
+принципиальным с точки зрения разработчика программного обеспечения, который
+стремится к модульности системы. Вполне разумно потребовать от разработчика
+алгоритма восстановления не менять исходные контуры, поскольку:
 
-\subsection{Обзор работы}
+\begin{enumerate}
+ \item Контуры и так содержат погрешности
+ \item Контуры уже подвергались предобработке и предварительной корректировке
+при извлечении контуров из фотографических снимков.
+\end{enumerate}
+
+Однако более детальное изучение проблемы показывает, что при построении какой
+бы то ни было модели камня происходит \textbf{опосредованное} изменение
+контуров. В самом деле, любая полученная модель не будет строго
+соответствовать эмпирическим данным, а лишь с некоторой точностью. Тогда по
+этой модели можно вновь простроить теневые контуры (теперь уже программным
+способом) и бликовые контуры по тем же направлениям фотографирования. Ясно, что
+полученные контуры будут отличаться от исходных.
+
+Мы приводим здесь это замечание, поскольку при чтении данной работы может
+возникнуть ощущение, что предлагаемый подход реализует "запрещенную"  с точки
+зрения практики вещь -- корректирует исходные данные. На деле это не так,
+поскольку:
+
+\begin{enumerate}
+ \item Скорректированные контуры используются только как промежуточный этап
+алгоритма восстановления.
+ \item Качество построенной модели проверяется с использованием только исходных
+данных, а не скорректированных.
+ \item Исходные данные не "забываются"  во время алгоритма и не "подменяются"
+никакими другими.
+\end{enumerate}
+
+\subsection{Смежные проблемы}
+
+При изучении литературы по смежным вопросам было замечено, что изучаемая
+проблема довольно схожа с классом классом задач, возникающих в таком разделе
+томографии, который называется \textit{геометрической томографией}. В данной
+работе была произведена попытка использовать найденные в этой области подходы
+для нужд исследуемой задачи -- трехмерном моделировании драгоценных камней.
+
+TODO: Вставить сюда по абзацу для каждого практического применения
+геометрической томографии.
+
+Исходные данные задачи восстановления тел по теневым и бликовым контурам
+несколько отличаются от исходных данных перечисленных выше задач. В данной
+работе мы сначала приведем некоторый вспомогательный математический аппарат,
+затем перечислим некоторые интересные нам алгоритмы геометрической томографии.
+В последующих разделах будет также показано, что известные алгоритмы можно
+существенно ускорить с помощью одного несложного геометрического соображения.
+В основной части работы будут приведены разработанные на основе известных ранее
+методы восстановления и результаты численных экспериментов.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
@@ -3094,7 +3307,7 @@ $$h_{K}(u) = u \cdot x$$
 величин.
 
 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \section{Обобщение на невыпуклый случай}
 
